...
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/title_carousel"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/carousel_recycler_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_home" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/carousel_recycler_view"
            android:layout_width="match_parent"
...
