...
    <string name="dumbell">Dumbell</string>
    <string name="title_carousel">Sudahkah Olahraga?</string>
    <string name="olahraga_untuk_kamu">Olahraga Untuk Kamu</string>
    <string name="content_description_media">Dumbell\n</string>
    <string name="title_card_workout">Bicep Curl</string>
    <string name="secondary_text">Dumbell</string>
    <string name="button_mulai">Mulai</string>
    <string name="supporting_text">blamelamdla\n</string>
    <string name="profil_pengembangan_aplikasi">Tentang Developer ARFI</string>
    <string name="title_about">Augmented Reality Fitness\nARFI</string>
    <string name="arrow">arrow</string>
    <string name="desc_about_aplikasi">ARFI merupakan aplikasi berbasis AR dengan menggunakan fitur body tracking sebagai pelatih olahraga virtual dalam membantu kalian dalam workout atau gym</string>
    <string name="saran_alat_workout">Alat Workout</string>
...
